2006-10-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Adding functionality to dump_functions
	* fixing some clipboard bugs
	* Added transpose_chars, transpose_words, upcase_word, downcase_word
	  capitalize_word, forward_delete_word, delete_horizontal_spacing
	* Added alias forward_kill_word for kill_word
	* Fixed bug in handling control keystrokes
	* Fixed bug in delete_selection
	* Changed clipboard handling in kill functions
	* Change paste to only paste single line and dropping trailing newline
	* Change paste_mulitline_code docstring
	
2006-10-17 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed history search bug. Exception when no match was found
	* Added backward_kill_word. (No difference to backward_delete_word)
	
2006-09-11 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added logserver. Socket based server that can receive logmessage.
	  To be used when debugging keypresses, could be a security risk as a keyboard sniffer.
	* Added log_sock call to send logging to logserver
	* Merging ANSI parsing from trunk
	* Parsing escape sequence for up down key in parse_bind
	* Merging bugfix for self_insert of tabs from trunk
	* Add bindable function that prints keybindings

2006-07-13 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Work to get selection between ironpython and cpython to work
	* Some editing works but there are issues with control keys for ironpython

2006-07-04 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* First commit for ironpython. Typing in alphabet works but no special keys.
	
	
2006-04-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added more tests for emacsmode
	* Made changes in lineeditor 
	* Added some new commands for move-selection
	* primitive logging in tests (both vi and emacs) to show what
	  functions are tested
	* winconstants.py are added to remove dependency on win32all
	
2006-04-04 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>